[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "itch-jam-scout"
version = "0.2.0"
description = "Read-only CLI that checks an itch.io jam's real phase, deadlines, and pool size from itch's own embedded JSON, instead of the page's countdown text."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Arcade Forge" }]
keywords = ["itch.io", "game-jam", "gamedev", "cli"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment",
]

[project.urls]
Homepage = "https://github.com/fernforge-arcade/itch-jam-scout"

[project.scripts]
jam-scout = "jam_scout:cli"

[tool.setuptools]
py-modules = ["jam_scout"]
